// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`UFCS and member access formats a UFCS call expression 1`] = `
"module Example {
  val count = Set(1).size()
}
"
`;

exports[`UFCS and member access preserves aligned dots in a multiline UFCS chain 1`] = `
"module Example {
  var n: int

  action init = n' = 0
  action step = n' = n + 1

  run trace =
      init.then(step)
          .then(step)
          .then(all {
            n' = n,
            assert(n >= 0),
          })
}
"
`;

exports[`UFCS and member access preserves a closing break on a multiline UFCS call 1`] = `
"module Example {
  action init = true
  action p2 = true
  action proposal = true
  action with_cue(process, cue) = process
  action perform(process) = process

  action result =
      init
          .then(p2
              .with_cue(proposal)
              .perform()
          )
}
"
`;

exports[`UFCS and member access preserves both delimiter breaks around a multiline UFCS argument 1`] = `
"module Example {
  val ready = true
  action init = true
  action first = true
  action second = true

  action result =
      init.then(first)
          .then(
              if (ready) {
                first
              } else {
                second
              }
          )
}
"
`;

exports[`UFCS and member access uses continuation indentation for a line-broken UFCS definition body 1`] = `
"module Example {
  pure def buyableVia1Swap(someCoins: Set[int]): Set[int] = someCoins

  pure def buyableVia2Swaps(someCoins: Set[int]): Set[int] =
      someCoins
          .buyableVia1Swap()
          .buyableVia1Swap()
}
"
`;

exports[`UFCS and member access uses continuation indentation for a line-broken UFCS definition body 2`] = `
[
  {
    "column": 1,
    "filePath": "input.qnt",
    "length": 4,
    "line": 5,
    "message": "expected a four-space continuation indent",
    "rule": "format/definition-body-indentation",
    "sourceLine": "    someCoins",
  },
  {
    "column": 1,
    "filePath": "input.qnt",
    "length": 6,
    "line": 6,
    "message": "expected a four-space continuation indent",
    "rule": "format/field-access-indentation",
    "sourceLine": "      .buyableVia1Swap()",
  },
  {
    "column": 1,
    "filePath": "input.qnt",
    "length": 6,
    "line": 7,
    "message": "expected a four-space continuation indent",
    "rule": "format/field-access-indentation",
    "sourceLine": "      .buyableVia1Swap()",
  },
]
`;

exports[`UFCS and member access preserves all aligned dots in a nondet UFCS chain 1`] = `
"module Example {
  var selected: int

  action step =
    nondet choice =
        Set(1, 2, 3)
            .filter(value => value > 1)
            .oneOf()
    selected' = choice
}
"
`;

exports[`UFCS and member access preserves blank lines between UFCS chain groups 1`] = `
"module Example {
  pure val result =
      Set(1)
          .union(Set(2))

          .union(Set(3))

          // Keep the final operation in its own explained group.
          .union(Set(4))
}
"
`;

exports[`UFCS and member access preserves a single multiline UFCS continuation 1`] = `
"module Example {
  pure def ensure(condition: bool, message: str): str = if (condition) "" else message
  pure def andEnsure(previous: str, condition: bool, message: str): str =
      if (previous != "") previous else ensure(condition, message)

  pure val error = ensure(true, "first message")
      .andEnsure(false, "second message")
}
"
`;

exports[`UFCS and member access uses a four-space structural indent for UFCS continuations 1`] = `
"module Example {
  var states: str -> int

  action step = {
    nondet key = Set("one")
        .oneOf()
    val updated = states
        .set(key, 1)
    states' = states
        .set(key, updated.get(key))
  }
}
"
`;

exports[`UFCS and member access uses a four-space structural indent for UFCS continuations 2`] = `
[
  {
    "column": 1,
    "filePath": "unformatted.qnt",
    "length": 27,
    "line": 6,
    "message": "expected a four-space continuation indent",
    "rule": "format/field-access-indentation",
    "sourceLine": "                           .oneOf()",
  },
  {
    "column": 1,
    "filePath": "unformatted.qnt",
    "length": 22,
    "line": 8,
    "message": "expected a four-space continuation indent",
    "rule": "format/field-access-indentation",
    "sourceLine": "                      .set(key, 1)",
  },
  {
    "column": 1,
    "filePath": "unformatted.qnt",
    "length": 15,
    "line": 10,
    "message": "expected a four-space continuation indent",
    "rule": "format/field-access-indentation",
    "sourceLine": "               .set(key, updated.get(key))",
  },
]
`;

exports[`UFCS and member access formats an index expression 1`] = `
"module Example {
  val first = List(1, 2)[0]
}
"
`;

exports[`UFCS and member access formats a field-access expression 1`] = `
"module Example {
  val answer = { value: 1 }.value
}
"
`;

exports[`UFCS and member access preserves a comment before a field selector 1`] = `
"module Example {
  pure val source = { field: 1 }
  pure val answer = source
      // Preserve this chain comment.
      .field
}
"
`;

exports[`UFCS and member access aligns comments with a continued UFCS selector 1`] = `
"module Example {
  action init = true
  action step = true

  run execution =
      init
          // Explain the first transition.
          // Keep this attached to the call.
          .then(step)
}
"
`;
